--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,9 @@
   .bg-custom-blue {
     background-color: #00022e;
   }
+  .custom-transparent-button {
+    background-color: rgba(255, 255, 255, 0.9);
+  }
 }
 
 @layer base {
